# introduction_to_ai-engineering

./: .gitignore  README.md  pyproject.toml
.github/workflows/: guard-pr-source.yml  quality-gate.yml
01_AIの仕組み/: 01_neural_network_learning_demo.ipynb
01_AIの仕組み/data/diagnostician_routing/: doctor_master.csv  routing_requests.csv
02_大規模言語モデルの作り方/: 02_rnn_next_token_prediction.ipynb
02_大規模言語モデルの作り方/data/: mhlw_ika_fee_schedule_pdf_excerpt.txt
