[project]
name = "supago-ai-engineering-beginners-guide"
version = "0.1.0"
description = "Notebook environment for the Supago AI engineering beginners guide."
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.29.0",
    "jupyterlab>=4.2.0",
    "matplotlib>=3.8.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
]

[tool.uv]
package = false
